...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txttoCall"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:ems="13"
                android:hint="Enter User to Call"
                android:inputType="textPersonName"
                android:textColor="#402D68"
                android:textSize="21dp" />

            <Button
                android:id="@+id/btnCallThis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/my_cool_button"
                android:onClick="call"
...
